--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>health</title>
+  <title>Health and Well-Being</title>
   <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -125,11 +125,7 @@
 
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
-              <h3><center>Contact</center></h3>
-              <font color="white">
-                NVFS Headquarters<br><br>
-		      Email: <a id="email" href="#"></a><br><br>Phone: <a id="phone" href="#"></a>
-              </font>
+              
             </div>
           </section>
 
