--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Donate</h2>
-                <p>Help Northern Virginia Families not just survive, but thrive</p>
+                <p>Help Northern Virginia Families not just survive, but thrive!</p>
                 <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a> <br>
                 <a href="DonationI.html" class="btn-get-started scrollto"> In-Kind Donations</a>
               </div>
