--- a/HomelessnessAndHousing.html
+++ b/HomelessnessAndHousing.html
@@ -128,7 +128,7 @@
             <div class="container text-center">
               <h3><center>Assistance Hotline</center></h3>
               <font color="white">
-				<em>Shelter, Housing, Rent, Utilities</em><br><br>
+				<em>Shelter and Housing, Rent, Utilities</em><br><br>
 				<!--
                 <strong>Fairfax County</strong><br>
 				<a href="tel:7032220880">703.222.0880</a><br><br>
