--- a/Services.html
+++ b/Services.html
@@ -117,7 +117,7 @@
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="MentalHealth.html">Mental Health</a></h4>
+            <h4 class="title"><a href="MentalHealth.html">Mental Health and Counseling</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
