--- a/MentalHealth.html
+++ b/MentalHealth.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mental Health</title>
+  <title>Mental Health and Counseling</title>
   <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -58,7 +58,7 @@
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
+              <li><a href="MentalHealth.html">Mental Health and Counseling</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
@@ -99,7 +99,7 @@
 		<br>
 		<br>
 		<br>
-          <h3>Mental Health</h3>
+          <h3>Mental Health and Counseling</h3>
           <h4><center>CULTURALLY COMPETENT MENTAL HEALTH SERVICES TO ADDRESS VARYING NEEDS</center></h4>
           <p>Sound mental health provides a critical foundation from which our neighbors can build their lives around. Mental health and stability can be compromised as a result of trauma, poverty, chronic stress and other tremendous challenges posed by cultural adjustment, homelessness or exposure to violence.
           </br></br> NVFS provides culturally competent, language-specific mental health services for all ages in various settings to ensure neighbors from all backgrounds have access to the support they need. Services are provided at NVFS offices and integrated into home, school and community settings, and include individual, family and group counseling, and mental health treatment and evaluation. These services are tailored to meet the developmental, cultural, language and relational needs of the client and their family system.</p>
