--- a/DonationI.html
+++ b/DonationI.html
@@ -205,7 +205,7 @@
 		<br>
 		<br>
 		Thrift Store <br>
-		<a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower @ Falls Church</a> <br>
+		<a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower</a> <br>
           *For more info, click on the Clock Tower Link <br>
           <!---
 		  <a href='https://maps.google.com/?q=2860&nbsp;annandale&nbsp;road'> 
