--- a/DonationI.html
+++ b/DonationI.html
@@ -205,7 +205,7 @@
 		<br>
 		<br>
 		Thrift Store <br>
-		<a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower</a> <br>
+		<a href="https://www.nvfs.org/support/thrift-shops/"><div id="name"></div></a> <br>
           *For more info, click on the Clock Tower Link <br>
           <!---
 		  <a href='https://maps.google.com/?q=2860&nbsp;annandale&nbsp;road'> 
@@ -216,7 +216,7 @@
           <font color="white"><a id="address" href="#"><a id="address1.1" href="#"></a></a></font><br><br>
 
 		Contact NVFS Donation Help <br>
-        C'Asha Faltz <br>
+        <div id="name2"></div> <br>
         <!--
 		Email: <a href="mailto: cfaltz@nvfs.org">cfaltz@nvfs.org</a> <br>
         Phone Number: <a href="tel:5717482621">571.748.2621</a>
@@ -424,8 +424,14 @@
         $.getJSON(url, function(result) {
             console.log(result);
             $.each(result, function(i, field) {
+		    if(field.ID == 3){
+			    
+              document.getElementById("name").innerHTML = field.name;
+		    }
     if(field.ID == 40){
               console.log(" Do I reach here");
+	    
+              document.getElementById("name").innerHTML = field.name2;
               document.getElementById("email").innerHTML = field.email;
 					var strLink = "mailto:" + field.email;
 					document.getElementById("email").setAttribute("href",strLink);
