--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -52,7 +52,7 @@
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
+              <li><a href="MentalHealth.html">Mental Health and Counseling</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
