--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -61,7 +61,7 @@
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
+              <li><a href="MentalHealth.html">Mental Health and Counseling</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
