--- a/hungerresourcecenter.html
+++ b/hungerresourcecenter.html
@@ -40,17 +40,17 @@
   <!--==========================
     Header
   ============================-->
-  <header id="header">
+ <header id="header">
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="#intro"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-	  <li class="menu-active"><a href="directory.html">Directory</a></li>
+          <li class="menu-active"><a href="directory.html">Directory</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -58,7 +58,7 @@
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
+              <li><a href="MentalHealth.html">Mental Health and Counseling</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
