--- a/DonationI.html
+++ b/DonationI.html
@@ -193,7 +193,7 @@
 					<li>Household Items</li>
 					<li>Classroom Supplies (Pre-school)</li>
 					<li>Board Books</li>
-					<li>Transportation (Metro cards, gas cards, ride service vouchers)</li>
+					<li>Transportation (Metro/Gas cards, vouchers)</li>
 					<li>Gift cards</li>	
 				</ul>
 			</li>
