--- a/DonationI.html
+++ b/DonationI.html
@@ -193,7 +193,7 @@
 					<li>Household Items</li>
 					<li>Classroom Supplies (Pre-school)</li>
 					<li>Board Books</li>
-					<li>Transportation (Metro/Gas cards, vouchers)</li>
+					<li>Transportation (Metro cards, gas cards, ride service vouchers)</li>
 					<li>Gift cards</li>	
 				</ul>
 			</li>
@@ -335,7 +335,7 @@
 	       <option value = "Household Items">Household Items</option>
 	       <option value = "Classroom Supplies (Pre-school)">Classroom Supplies (Pre-school)</option>
 	       <option value = "Board Books">Board Books</option>
-	       <option value = "Transportation (Metro cards, gas cards, ride service vouchers)">Transportation (Metro cards, gas cards, ride service vouchers)</option>
+	       <option value = "Transportation (Metro/Gas cards, vouchers)">Transportation (Metro/Gas cards, vouchers)</option>
 	       <option value = "Gift cards">Gift cards</option>
              </select>
 	</div>
